<?xml version="1.0"?>
<package>
  <name>phidget_textlcd</name>
  <version>0.0.0</version>
  <description>The phidget_textlcd package</description>

  <maintainer email="richer@isir.upmc.fr">Florian Richer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
